--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                             <li><i class="fa-li fa fa-spinner fa-spin " aria-hidden="true"></i>some other cool libraries and frameworks.
                             </li>
                            
-                            <li><i class="fa-li fa fa-spinner fa-spin " aria-hidden="true"></i>Vue.js , nodejs , ionic : connaissances des bases</li>
+                            <li><i class="fa-li fa fa-spinner fa-spin " aria-hidden="true"></i>Vue.js , nodejs... : connaissances des bases</li>
                             <li><i class="fa-li fa fa-spinner fa-spin fab  " aria-hidden="true"></i><a href="https://www.snipcart.com">snipcart , <a href="https://www.shopify.com/">shopify</a></a></li>
                             <li><i class="fa-li fa fa-spinner fa-spin fab  " aria-hidden="true"></i>Réseau informatique</li>
 
